# MediaServerPractice

./: CMakeLists.txt  README.en.md  README.md
3rd/include/glog/: raw_logging.h  stl_logging.h  vlog_is_on.h
3rd/include/libevent/event2/: event-config.h
3rd/lib/libevent/: libevent_openssl-2.2.so.1.0.0
Common/include/glog/: logging.h
Common/lib/libevent/: libevent_core-2.2.so.1.0.0
MediaServer/: CMakeLists.txt
MediaServer/Application/include/: AppVersion.h  Application.h
MediaServer/Application/src/: AppVersion.cpp  Application.cpp  ServerMain.cpp
MediaServer/Common/include/: ZLWSingleton.h
MediaServer/Util/include/: ZLWCMD.h  ZLWExtend.h  ZLWUtil.h
MediaServer/Util/src/: ZLWCMD.cpp  ZLWExtend.cpp  ZLWUtil.cpp
MediaServer/glog/: CMakeLists.txt
MediaServer/glog/include/: glog_fmt.h
MediaServer/glog/src/: glog_fmt.cpp
