cmake_minimum_required(VERSION 3.9)
project(PEMediaServer)
set(CMAKE_CXX_STANDARD 17)

set(PROG_VERSION "1.0.0")
ADD_DEFINITIONS(-DFMT_HEADER_ONLY)

# 编译模块
add_subdirectory(MediaServer)
SET(PROGRAM_NAME "MediaServerDeploy")
SET(CMAKE_INSTALL_PREFIX ${PROGRAM_NAME})
#包前缀
SET(PACKAGE_PREFIX "${PROGRAM_NAME}")

install(TARGETS PEMediaServer RUNTIME DESTINATION bin PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ GROUP_WRITE)

#忽略子目录的install
install(CODE "RETURN()")
